syntax = "proto3";
import "google/protobuf/wrappers.proto";

option java_package = "com.star_zero.dagashi.core.data.datasource.datastore";
option java_multiple_files = true;

message Settings {
  bool open_link_in_app = 1;
  enum DarkTheme {
    DEVICE = 0;
    ON = 1;
    OFF = 2;
  }
  DarkTheme dark_theme = 2;
  google.protobuf.BoolValue dynamic_theme = 3;
}
